Updating EDA projects

--- a/EDA_8.3/EDA_human_temperature/sliderule_dsi_inferential_statistics_exercise_1.ipynb
+++ b/EDA_8.3/EDA_human_temperature/sliderule_dsi_inferential_statistics_exercise_1.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,12 +89,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as stats\n",
-    "import statsmodels as sm "
+    "import statsmodels\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +170,7 @@
        " <a list of 10 Patch objects>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,36 +255,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There is a 95% confidence interval that the mean of the population is 98.24853692307691 with a range of [98.12998077 98.36694231]\n"
+      "Confidence Interval: [98.12607692 98.37696154]\n"
      ]
     }
    ],
    "source": [
     "bs_temp = draw_bs_reps(df['temperature'], np.mean, size=1000)\n",
     "bs_temp_percentile = np.percentile(bs_temp, (2.5, 97.5))\n",
-    "print('There is a 95% confidence interval that the mean of the population is', np.mean(bs_temp), \\\n",
-    "      'with a range of', bs_temp_percentile)\n",
+    "print('Confidence Interval:', bs_temp_percentile)\n",
     "\n",
     "#3. Given the confidence interval, I don't believe the population mean is 98.6"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The true population mean lies somewhere between [98.11534615 98.38001923] with 95% confidence, so I reject that the true populatoin mean is 98.6 degrees F"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The T statistic is:  5.4548232923645195\n",
+      "n: 130\n",
+      "t statistic: -5.4548232923645195\n",
+      "p-value: 2.4106320415561276e-07\n",
       "Since the probability of getting a mean of 98.6 is so far from the samples means, it is safe to reject the null hypothesis\n"
      ]
     }
@@ -297,23 +306,27 @@
     "\n",
     "temp_mean = df.temperature.mean() #mean of teamperature sample\n",
     "\n",
-    "t_stat = (temp_mean - 98.6)/se #t score formula\n",
+    "t_stat = (temp_mean - 98.6)/se #one sample t score formula\n",
     "\n",
-    "print('The T statistic is: ', abs(t_stat))\n",
+    "p_value2 = stats.t.sf(abs(t_stat), n - 1) #Must get the absolute value of the t_stat\n",
+    "\n",
+    "print('n:', n)\n",
+    "print('t statistic:',t_stat)\n",
+    "print('p-value:',p_value2 * 2) #For a two tailed test we need the p value times 2 for both ends of the curve\n",
     "print('Since the probability of getting a mean of 98.6 is so far from the samples means, it is safe to reject the null hypothesis')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ttest_1sampResult(statistic=-5.4548232923645195, pvalue=2.4106320415561276e-07)\n",
-      "z stat:  -5.4548232923645195\n"
+      "(1527.8768644603886, 0.0)\n",
+      "p value using z test: 0\n"
      ]
     }
    ],
@@ -322,17 +335,17 @@
     "\n",
     "z_stat = (temp_mean - 98.6) / se\n",
     "\n",
-    "x = stats.ttest_1samp(df.temperature, 98.6) #Comparing with scipy\n",
+    "x = statsmodels.stats.weightstats.ztest(df.temperature) #Returns the degrees of freedom and the p-value\n",
     "print(x)\n",
     "\n",
-    "print('z stat: ', z_stat)"
+    "print('p value using z test:', 0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With a z score of:  -5.4548232923645195 the probability of a mean of 98.6 has a p probability of nearly 0, so we still reject the null hypothesis\n",
+    "Using a z test we get a p value of zero, so we reject the null hypothesis.\n",
     "Both results using a t test or  z test are nearly 0, with a z test having an even lower probability\n",
     "The z test is better used for when the population is above 30, but in this case we didnt know the population standard deviation, so we used a t test primarily."
    ]
@@ -346,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +381,7 @@
     "samp1_mean = sample1.mean()\n",
     "ztest = (samp1_mean - 98.6) / se1\n",
     "\n",
-    "print('z stat =', t_stat_samp1) #The t score and z score will be the same. need to reject / fix\n",
+    "print('z stat =', ztest) #The t score and z score will be the same. need to reject / fix\n",
     "\n",
     "ttest = stats.ttest_1samp(sample1, 98.6)\n",
     "print(ttest)\n"
@@ -394,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +420,6 @@
     }
    ],
    "source": [
-    "\n",
     "margin_of_error = 1.96 * se1 #with an alpha of .05, the z stat will be 1.96 (with 2.5% on both ends of the curve)\n",
     "print('Margin of error:',margin_of_error)\n",
     "print('A temperature below:', samp1_mean - margin_of_error, 'or above:', samp1_mean + margin_of_error, 'would be considered abnormal')"
@@ -415,11 +427,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "95% confidence interval: [97.6225 98.855 ]\n"
+     ]
+    }
+   ],
    "source": [
-    "sample2 = draw_bs_reps(df['temperature'], np.mean, size=1)"
+    "\n",
+    "\n",
+    "sample1_percentile = np.percentile(sample1, (2.5, 97.5))\n",
+    "\n",
+    "print('95% confidence interval:', sample1_percentile)"
    ]
   },
   {
@@ -454,7 +478,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "male_temp = df['temperature'][df.gender == 'M']\n",
+    "female_temp = df['temperature'][df.gender == 'F']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +500,7 @@
     }
    ],
    "source": [
-    "test_stat, pvalue = sm.stats.weightstats.ztest(x1=male_temp, x2=female_temp)\n",
+    "test_stat, pvalue = statsmodels.stats.weightstats.ztest(x1=male_temp, x2=female_temp)\n",
     "print('test statistic =', test_stat,\n",
     "      'p-value =', pvalue)"
    ]
