--- a/Inferential_Stats_8.5/Exploratory_Data_Analysis_PUBG.ipynb
+++ b/Inferential_Stats_8.5/Exploratory_Data_Analysis_PUBG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_solo1000 = pd.read_csv('df_solo1000.csv') #In a previous notebook, I divided the datasets into solo, duo, and squad mode, and downlaoded them as csv files.\n",
     "df_duo1000 = pd.read_csv('df_duo1000.csv')\n",
-    "df_squad1000 = pd.read_csv('df_squad1000.csv')"
+    "df_squad1000 = pd.read_csv('df_squad1000.csv')\n",
+    "\n",
+    "df_solo = pd.read_csv('df_solo.csv')"
    ]
   },
   {
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +294,7 @@
        "player_survival_time              1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +526,7 @@
        "player_survival_time              1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +758,7 @@
        "player_survival_time              1.000000  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -847,7 +849,7 @@
        "Ttest_indResult(statistic=17.55768650275415, pvalue=2.718851850678828e-64)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,6 +860,95 @@
     "#Using vehicles defintely increases a players survival time\n",
     "#Many players avoid vehicles to avoid having attention brought to them, hoping this will keep them alive"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I'd like to examine the range of stats for all of the first place players in solo matches."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "firstplace = df_solo[df_solo.team_placement == 1]\n",
+    "\n",
+    "def bootstrap_replicate_1d(data, func):\n",
+    "    return func(np.random.choice(data, size=len(data)))\n",
+    "\n",
+    "def draw_bs_reps(data, func, size=1):\n",
+    "    \"\"\"Draw bootstrap replicates.\"\"\"\n",
+    "\n",
+    "    # Initialize array of replicates: bs_replicates\n",
+    "    bs_replicates = np.empty(size)\n",
+    "\n",
+    "    # Generate replicates\n",
+    "    for i in range(size):\n",
+    "        bs_replicates[i] = bootstrap_replicate_1d(data, func)\n",
+    "\n",
+    "    return bs_replicates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence Interval: [6.94742282 6.99468351]\n",
+      "Mean 6.970885627729473\n"
+     ]
+    }
+   ],
+   "source": [
+    "bs_temp = draw_bs_reps(firstplace.player_kills, np.mean, size=1000)\n",
+    "bs_temp_percentile = np.percentile(bs_temp, (2.5, 97.5))\n",
+    "print('Confidence Interval:', bs_temp_percentile)\n",
+    "print('Mean', np.mean(firstplace.player_kills))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confidence Interval: [3.58724136 3.61285905]\n",
+      "Mean: 3.599950125015586\n"
+     ]
+    }
+   ],
+   "source": [
+    "secondplace = df_solo[df_solo.team_placement == 2]\n",
+    "\n",
+    "bs_temp2 = draw_bs_reps(secondplace.player_kills, np.mean, size=1000)\n",
+    "bs_temp_percentile2 = np.percentile(bs_temp2, (2.5, 97.5))\n",
+    "print('Confidence Interval:', bs_temp_percentile2)\n",
+    "print('Mean:', np.mean(secondplace.player_kills))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When conducting a bootstrap sampling test 1000 times, we cans see that the mean difference in first and second place is consistently 3-4 kills greater."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
