--- a/amazon_case_study_twitter (2).ipynb
+++ b/amazon_case_study_twitter (2).ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Amazon case study "
+    "# Priceline case study "
    ]
   },
   {
